kubernetes/yaml/resources/api-postgres/statefulset-slaves.yaml
---
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: "api-postgres-slave"
  labels:
    app: api-postgres
spec:
  serviceName: api-postgres-headless
  replicas: 1
  selector:
    matchLabels:
      app: api-postgres
      role: slave
  template:
    metadata:
      name: api-postgres
      labels:
        app: api-postgres
        role: slave
    spec:
      securityContext:
        fsGroup: 1001
      serviceAccountName: api-postgres
      containers:
        - name: api-postgres
          image: docker.io/bitnami/postgresql:11.5.0-debian-9-r26
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              cpu: 1m
              memory: 32Mi
          securityContext:
            runAsUser: 1001
          ports:
            - name: postgres
              containerPort: 5432
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - exec pg_isready -U "api_daemon" -d "api_daemon" -h 127.0.0.1 -p 5432
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  pg_isready -U "api_daemon" -d "api_daemon" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ]
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          volumeMounts:
            - name: data
              mountPath: /bitnami/postgresql
              subPath: ""
            - name: api-postgres-config
              mountPath: /bitnami/postgresql/conf
      volumes:
        - name: api-postgres-config
          configMap:
            name: api-postgres-configuration
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
