kubernetes/yaml/resources/api-postgres/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-postgres
  labels:
    app: api-postgres
spec:
  type: ClusterIP
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
  selector:
    app: api-postgres
    role: master
