kubernetes/yaml/resources/api-postgres/networkpolicy-slaves.yaml
---
kind: NetworkPolicy
apiVersion: "networking.k8s.io/v1"
metadata:
  name: api-postgres
  labels:
    app: api-postgres
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app: api-postgres
      role: slave
  ingress:
    # Allow inbound connections
    - ports:
        - port: 5432
      from:
        - podSelector:
            matchLabels:
              api-postgres-client: "true"
    # Allow prometheus scrapes
    - ports:
        - port: 9187
  egress:
    - ports:
        - port: 5432
      to:
        - podSelector:
            matchLabels:
              app: api-postgres
              role: master
